--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -110,7 +110,8 @@ ul li.active a {
       background-color: $primaryColor;
       padding: 0.75rem;
       text-align: center;
-      color: #fff;
+      color: black;
+      font-weight: bold;
       text-decoration: none;
       margin: 0 1rem 1rem 1rem;
       border-radius: 10px;
@@ -125,7 +126,7 @@ img {
 
 /* FOOTER  */
 #footerWrapper {
-  background-color: lighten($primaryColor, 20%);
+  background-color: lighten($primaryColor, 10%);
 }
 
 footer {
@@ -134,6 +135,10 @@ footer {
   text-align: center;
   padding-left: 20px;
   color: #000000;
+
+  a {
+    color: #000000;
+  }
 
   section.contact {
     p {
@@ -155,8 +160,8 @@ footer {
     display: flex;
     justify-content: center;
     a {
-      color: #fff;
       padding: 1rem;
+      color: white;
       ion-icon {
         font-size: 1.5rem;
       }
